--- a/k8s/app.yml
+++ b/k8s/app.yml
@@ -2,35 +2,36 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: spring-6-di
+  name: @project.artifactId@
 spec:
   type: NodePort
   ports:
-    - port: 80
+    - port: 8080
       targetPort: 8080
+      nodePort: 30080
   selector:
-    app: spring-6-di
+    app: @project.artifactId@
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: spring-6-di
+  name: @project.artifactId@
   labels:
-    app: spring-6-di
+    app: @project.artifactId@
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: spring-6-di
+      app: @project.artifactId@
   template:
     metadata:
       labels:
-        app: spring-6-di
+        app: @project.artifactId@
     spec:
       containers:
-        - name: spring-6-di
-          image: domboeckli/spring-6-di:0.0.1-SNAPSHOT
+        - name: @project.artifactId@
+          image: @docker.repo@/@project.artifactId@:@project.version@
           env:
             - name: SPRING_APPLICATION_JSON
               value: |
